# slopsniff

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  slopsniff.json  temp_slop_examples.py
.github/workflows/: ci.yml  publish.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
npm/templates/: slopsniff.json
scripts/: release.py
src/slopsniff/: cli.py  config.py  git_scope.py  models.py  pragma.py  scanner.py  scoring.py  walker.py
src/slopsniff/parsers/: python_ast.py  text_parser.py
src/slopsniff/reporters/: json_reporter.py  terminal.py
src/slopsniff/rules/: base.py  duplicate_functions.py  exposed_secrets.py  fallback_defaults.py  helper_sprawl.py  large_file.py  large_function.py
tests/: test_config.py  test_duplicate_functions.py  test_exposed_secrets.py  test_fallback_defaults.py  test_git_scope.py  test_helper_sprawl.py  test_large_file.py  test_large_function.py  test_pragma.py  test_scanner_exclude_severities.py  test_scanner_include_rules.py  test_walker.py
