[project]
name = "slopsniff"
version = "0.1.9"
description = "A lightweight CLI for catching slop in modern codebases before it hardens into tech debt."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "joshuagilley", email = "joshdgilley@gmail.com" }
]
keywords = ["cli", "code-quality", "static-analysis", "linter", "ai", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.0",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/joshuagilley/slopsniff"
Repository = "https://github.com/joshuagilley/slopsniff"
"Bug Tracker" = "https://github.com/joshuagilley/slopsniff/issues"

[project.scripts]
slopsniff = "slopsniff.cli:app"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
